# kitsune-wallpaperengine

./: .gitignore  Cargo.toml  NOTES.md  README.md  README_WINDOWS.MD  RELEASE_AUR.md  commands.md
.github/workflows/: release.yml
aur/: .SRCINFO  PKGBUILD
scripts/: install-deps.sh
src/: asset_resolver.rs  audio.rs  cli.rs  lib.rs  library_scan.rs  main.rs  playback.rs  scene_effect_proxy.rs  scene_gpu_backend.rs  scene_gpu_graph.rs  scene_native_renderer.rs  scene_native_runtime.rs  scene_pkg.rs  scene_plan.rs  scene_renderer.rs  scene_runtime.rs  scene_script.rs  scene_text.rs  services.rs  startup_config.rs  tex_payload.rs  types.rs  video_opt.rs  video_tune.rs  wallpaper.rs
