[package]
name = "kitsune-wallpaperengine"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Kitsune Wallpaper Engine MVP runtime"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
lz4_flex = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
tempfile = "3.23"
